@startuml

skinparam shadowing true

class BattleScene {
    - Map *map
    - Character *character
    - Armor *spareArmor
}

class Character {
    # HeadEquipment *headEquipment{}
    # LegEquipment *legEquipment{}
    # Armor *armor{}
}

Scene <|-- BattleScene

BattleScene o-- Map
BattleScene o-- Character
BattleScene o-- Armor

Item <|-- Map
Map <|-- Battlefield

Character o-- HeadEquipment
Character o-- Armor
Character o-- LegEquipment

@enduml
